<resources>
    <string name="app_name">AutoFarm</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account? Login</string>
    <string name="logo">logo</string>
    <string name="Login">Login</string>
    <string name="do_not_have_an_account">Don\'t have an account? Register</string>
    <string name="soil_report">Soil Report</string>
    <string-array name="stage">
        <item> Germination</item>
        <item> Weaning</item>
        <item> Initiation of ears</item>
        <item> Tassel Visible</item>
        <item> Female Flowering</item>
        <item> Grain Abortion Limit</item>
        <item> Doughy Grain</item>
        <item> Maturity</item>
    </string-array>
</resources>